before with bg img css

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #56fdad; }
+  background: #1bfe59; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1efa3e; }
+  background: #1e36e4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #070bcd; }
+  background: #25e042; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2486fb; }
+  background: #eda942; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #550515; }
+  background: #dcf60e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7a9110; }
+  background: #c0c3b9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4492ce; }
+  background: #a10153; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4db5ec; }
+  background: #c32ca2; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #575a91; }
+  background: #c77ee7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0971c8; }
+  background: #1ec2dd; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c1090d; }
+  background: #2f3eff; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b67b45; }
+  background: #a12eb8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b7dc0b; }
+  background: #59c195; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0a3fc4; }
+  background: #2bba0b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #09e8f3; }
+  background: #add52c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #92b1d8; }
+  background: #51b64d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #56378a; }
+  background: #51c26a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cf806f; }
+  background: #423a5f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #845ada; }
+  background: #9c71e1; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9121e1; }
+  background: #7d2908; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #55cfcc; }
+  background: #6f76fe; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4d4ef8; }
+  background: #b695ac; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e21458; }
+  background: #f30ed4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e61257; }
+  background: #d3158c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6bf8cd; }
+  background: #2b6d13; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f5ef3c; }
+  background: #4d26e3; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #01d344; }
+  background: #f77c5a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #90573d; }
+  background: #4213f9; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #1a279a; }
+  background: #9def5d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #087ec6; }
+  background: #80b7f9; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #635a54; }
+  background: #278d96; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fa6429; }
+  background: #a9b3a3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c00cf0; }
+  background: #f00a49; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #cb33e8; }
+  background: #add195; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #bfc299; }
+  background: #9aeda6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #38f3fe; }
+  background: #226119; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ecd69f; }
+  background: #4826a8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #a27b78; }
+  background: #832da9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f6f260; }
+  background: #58ae46; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f06046; }
+  background: #6c2901; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ffea8d; }
+  background: #457f25; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #137d4a; }
+  background: #67e072; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a52252; }
+  background: #c03d13; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3cb1cf; }
+  background: #5f5041; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #56949c; }
+  background: #1cab10; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5024c8; }
+  background: #977eb4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f77f65; }
+  background: #bc4345; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d30762; }
+  background: #fae18e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d349ad; }
+  background: #966c24; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6e62f4; }
+  background: #a0f2fc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #99027e; }
+  background: #e8e9eb; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4fec0f; }
+  background: #55de87; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b19988; }
+  background: #d754bc; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #598bf7; }
+  background: #ed4a2a; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9a3c4a; }
+  background: #bcacc7; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e228fe; }
+  background: #26f890; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #60e531; }
+  background: #7ce2a7; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d9e15e; }
+  background: #9f200d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cfa146; }
+  background: #a7b76c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c4182f; }
+  background: #2bc927; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4c203e; }
+  background: #43605d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8b1a96; }
+  background: #bb6085; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #964059; }
+  background: #38843d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e1c011; }
+  background: #3917df; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fb169b; }
+  background: #92cc4c; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #78ee11; }
+  background: #266ef7; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5d925c; }
+  background: #1c46bc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b304dd; }
+  background: #718c90; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #11eff3; }
+  background: #1b0380; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b37c0d; }
+  background: #7e2c0a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #535f49; }
+  background: #745e1d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7564ea; }
+  background: #3b87d8; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #af815b; }
+  background: #6649d0; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3dd94e; }
+  background: #12463f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a78fa0; }
+  background: #6d7719; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #22f9ba; }
+  background: #85894a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #75b4e6; }
+  background: #789d7e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d24353; }
+  background: #472651; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #df32d2; }
+  background: #9ca23a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #3af94d; }
+  background: #092ae6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b6d19d; }
+  background: #4383d8; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #94ab25; }
+  background: #74131e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #068f69; }
+  background: #9ef468; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #69dbab; }
+  background: #5fa043; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1f02d4; }
+  background: #2b777b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d8d8b4; }
+  background: #c32427; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5b2348; }
+  background: #a72542; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c481ca; }
+  background: #c19103; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #dfe551; }
+  background: #8772be; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #673f8a; }
+  background: #aeec7d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c39e05; }
+  background: #b59023; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ce7667; }
+  background: #ad489e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ec52cb; }
+  background: #9b21ee; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #79ffb9; }
+  background: #5be351; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cc4ce0; }
+  background: #078637; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #dbaa12; }
+  background: #53a06b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a6bfc8; }
+  background: #d4d2b5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #2a2031; }
+  background: #3b1e65; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #43b7ca; }
+  background: #756c40; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ca837c; }
+  background: #de834b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11609,7 +11609,7 @@ input:checked + .sliders:before {
   margin-left: 15px; }
 
 .modal-add-connections-wrapper .adapter-modal-content-box {
-  padding: 40px;
+  padding: 40px 25px;
   padding-top: 11px; }
 
 .modal-add-connections-wrapper .adapter-modal-field-row div {
@@ -11968,17 +11968,17 @@ input:checked + .sliders:before {
       position: relative; }
       .process-button-wrapper ul li span::before {
         content: "";
-        width: 0;
-        height: 0;
-        border-top: 8px solid transparent;
-        border-bottom: 8px solid transparent;
-        border-left: 8px solid #e0e0e1;
+        width: 10px;
+        height: 16px;
+        background: url(../images/right-arrow-light-gray.png) no-repeat;
+        width: 10px;
+        height: 16px;
         position: absolute;
-        top: 0;
-        right: -10px;
+        top: 0px;
         bottom: 0px;
         display: flex;
-        margin: auto; }
+        margin: auto;
+        right: -8px; }
     .process-button-wrapper ul .no-arrow::before {
       content: "";
       display: none; }
@@ -11990,7 +11990,9 @@ input:checked + .sliders:before {
       cursor: pointer; }
       .process-button-wrapper ul .active-btn::before {
         content: "";
-        border-left: 8px solid #776fff; }
+        background: url(../images/right-arrow.png) no-repeat;
+        width: 10px;
+        height: 16px; }
     .process-button-wrapper ul .sucess-active {
       background: #fff;
       border: 2px solid #776fff;
@@ -12020,11 +12022,20 @@ input:checked + .sliders:before {
   cursor: pointer; }
   .process-button-level-tow ul li span::before {
     content: "";
-    border-left: 8px solid #776fff; }
+    background: url(../images/right-arrow.png) no-repeat;
+    width: 10px;
+    height: 16px;
+    right: -10px; }
 .process-button-level-tow ul li .three-level-active-btn {
   background: #776fff !important;
   border: 2px solid #776fff !important;
   color: #fff !important; }
+  .process-button-level-tow ul li .three-level-active-btn::before {
+    content: "";
+    background: url(../images/right-arrow.png) no-repeat;
+    width: 10px;
+    height: 16px;
+    right: -12px; }
 
 .full-search-row form {
   width: 100%; }
