--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1bfe59; }
+  background: #6d1081; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1e36e4; }
+  background: #acd36d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #25e042; }
+  background: #2705d2; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #eda942; }
+  background: #f4eb25; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #dcf60e; }
+  background: #68d495; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c0c3b9; }
+  background: #cdef7b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a10153; }
+  background: #17beed; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c32ca2; }
+  background: #ecdae8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c77ee7; }
+  background: #f0e5e4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1ec2dd; }
+  background: #bfb5b1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2f3eff; }
+  background: #a2bf74; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a12eb8; }
+  background: #dcde1c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #59c195; }
+  background: #fc564e; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #2bba0b; }
+  background: #abbac5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #add52c; }
+  background: #75d2cc; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #51b64d; }
+  background: #118440; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #51c26a; }
+  background: #7be132; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #423a5f; }
+  background: #a02d4f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #9c71e1; }
+  background: #3044a7; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7d2908; }
+  background: #065a0c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6f76fe; }
+  background: #b1cebd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b695ac; }
+  background: #b5e93f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f30ed4; }
+  background: #02edfd; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d3158c; }
+  background: #856f97; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #2b6d13; }
+  background: #3d76ac; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4d26e3; }
+  background: #8464e7; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f77c5a; }
+  background: #699ff4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4213f9; }
+  background: #7d1b78; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9def5d; }
+  background: #bdab81; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #80b7f9; }
+  background: #afb45b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #278d96; }
+  background: #b2f8ce; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #a9b3a3; }
+  background: #b0fd34; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f00a49; }
+  background: #f50d07; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #add195; }
+  background: #05d4c7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9aeda6; }
+  background: #675a80; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #226119; }
+  background: #7c9c1f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #4826a8; }
+  background: #1ef787; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #832da9; }
+  background: #f257bd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #58ae46; }
+  background: #20551c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6c2901; }
+  background: #46bb28; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #457f25; }
+  background: #992294; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #67e072; }
+  background: #9baafb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c03d13; }
+  background: #2588e5; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5f5041; }
+  background: #b2913c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #1cab10; }
+  background: #366c34; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #977eb4; }
+  background: #c5bba6; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bc4345; }
+  background: #e984d8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #fae18e; }
+  background: #5fc055; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #966c24; }
+  background: #635bc1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a0f2fc; }
+  background: #167c3c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e8e9eb; }
+  background: #80380f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #55de87; }
+  background: #fa0f5f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d754bc; }
+  background: #4a62cd; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ed4a2a; }
+  background: #a09585; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #bcacc7; }
+  background: #d90244; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #26f890; }
+  background: #260bac; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #7ce2a7; }
+  background: #85c9f8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9f200d; }
+  background: #3f4fa7; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a7b76c; }
+  background: #038804; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2bc927; }
+  background: #43f0eb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #43605d; }
+  background: #815a39; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #bb6085; }
+  background: #c447b2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #38843d; }
+  background: #d3e086; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3917df; }
+  background: #034fde; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #92cc4c; }
+  background: #a87887; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #266ef7; }
+  background: #f370b5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1c46bc; }
+  background: #3955b2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #718c90; }
+  background: #4eaa43; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1b0380; }
+  background: #048fc7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7e2c0a; }
+  background: #e5564c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #745e1d; }
+  background: #ae738c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #3b87d8; }
+  background: #c10f78; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6649d0; }
+  background: #47a549; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #12463f; }
+  background: #ef549a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6d7719; }
+  background: #ff2620; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #85894a; }
+  background: #504af9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #789d7e; }
+  background: #e6fdc1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #472651; }
+  background: #2d0396; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9ca23a; }
+  background: #a1e6a0; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #092ae6; }
+  background: #03be73; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #4383d8; }
+  background: #020aff; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #74131e; }
+  background: #f6f455; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #9ef468; }
+  background: #29ceb7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5fa043; }
+  background: #3fe31d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #2b777b; }
+  background: #fddc2e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c32427; }
+  background: #87608a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a72542; }
+  background: #0306c2; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c19103; }
+  background: #606efd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8772be; }
+  background: #d95bd5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #aeec7d; }
+  background: #9edb1e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b59023; }
+  background: #5c13d3; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ad489e; }
+  background: #3edb0e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9b21ee; }
+  background: #261307; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5be351; }
+  background: #510bc2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #078637; }
+  background: #cc24ee; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #53a06b; }
+  background: #34d271; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #d4d2b5; }
+  background: #b84b78; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3b1e65; }
+  background: #c5047c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #756c40; }
+  background: #015dfb; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #de834b; }
+  background: #152a63; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11955,7 +11955,8 @@ input:checked + .sliders:before {
 .process-button-wrapper {
   margin: 15px 0px 40px; }
   .process-button-wrapper ul {
-    display: flex; }
+    display: flex;
+    align-items: center; }
     .process-button-wrapper ul li span {
       background: #e0e0e1;
       border: 2px solid #e0e0e1;
@@ -12019,13 +12020,14 @@ input:checked + .sliders:before {
   background: transparent;
   border: 2px solid #776fff;
   color: #000;
-  cursor: pointer; }
+  cursor: pointer;
+  display: inline-block; }
   .process-button-level-tow ul li span::before {
     content: "";
     background: url(../images/right-arrow.png) no-repeat;
     width: 10px;
     height: 16px;
-    right: -10px; }
+    right: -12px; }
 .process-button-level-tow ul li .three-level-active-btn {
   background: #776fff !important;
   border: 2px solid #776fff !important;
