--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1260,6 +1260,7 @@ input:checked+.sliders:before {
 
   ul {
     display: flex;
+    align-items: center;
 
     li {
       span {
@@ -1374,6 +1375,7 @@ input:checked+.sliders:before {
         border: 2px solid #776fff;
         color: #000;
         cursor: pointer;
+        display: inline-block;
 
         &::before {
           content: "";
@@ -1381,7 +1383,7 @@ input:checked+.sliders:before {
           background: url(../images/right-arrow.png) no-repeat;
           width: 10px;
           height: 16px;
-          right: -10px;
+          right: -12px;
         }
       }
 
